2016-10-05  Andrew Senkevich  <andrew.senkevich@intel.com>

	* gcc.target/i386/pcommit-1.c: Deleted.
	* gcc.target/i386/sse-12.c: Deleted -pcommit option.
	* gcc.target/i386/sse-13.c: Ditto.
	* gcc.target/i386/sse-14.c: Ditto.
	* gcc.target/i386/sse-22.c: Ditto.
	* gcc.target/i386/sse-23.c: Ditto.
	* g++.dg/other/i386-2.C: Ditto.

2016-10-05  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/pr77833.c: Require int128 effective target.

2016-10-05  Steven G. Kargl  <kargls@gcc.gnu.org>

	PR fortran/58991
	PR fortran/58992
	* gfortran.dg/associate_22.f90: New test.

2016-10-05  Fritz Reese  <fritzoreese@gmail.com>

	* gfortran.dg/dec_union_9.f90: New testcase.
	* gfortran.dg/dec_union_10.f90: New testcase.

2016-10-05  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/66343
	* gcc.dg/pch/pr66343-3.c: New test.
	* gcc.dg/pch/pr66343-3.hs: New file.

	PR sanitizer/66343
	* gcc.dg/pch/pr66343-1.c: New test.
	* gcc.dg/pch/pr66343-1.hs: New file.
	* gcc.dg/pch/pr66343-2.c: New test.
	* gcc.dg/pch/pr66343-2.hs: New file.

2016-10-05  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* c-c++-common/Wint-in-bool-context.c: Update test.

2016-10-05  Marek Polacek  <polacek@redhat.com>

	* g++.dg/cpp1z/init-statement1.C: New test.
	* g++.dg/cpp1z/init-statement2.C: New test.
	* g++.dg/cpp1z/init-statement3.C: New test.
	* g++.dg/cpp1z/init-statement4.C: New test.
	* g++.dg/cpp1z/init-statement5.C: New test.
	* g++.dg/cpp1z/init-statement6.C: New test.
	* g++.dg/cpp1z/init-statement7.C: New test.
	* g++.dg/cpp1z/init-statement8.C: New test.

2016-10-05  Louis Krupp  <louis.krupp@zoho.com>

	PR fortran/67524
	* gfortran.dg/pr67524.f90: New test.

2016-10-05  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/77823
	* c-c++-common/ubsan/shift-9.c: New test.

2016-10-05  Senthil Kumar Selvaraj  <senthil_kumar.selvaraj@atmel.com>

	* gcc.dg/torture/pr69941.c: Use __INT32_TYPE__ instead
	of int if __SIZEOF_INT__ is less than 4 bytes.

2016-10-05  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
