@@ -1,0 +1,17 @@
+// { dg-options -std=c++1z }
+
+void
+f ()
+{
+  {
+    int c;
+    if (int c = 2; c != 0)
+      int c = 4; // { dg-error "redeclaration" }
+  }
+
+  if (int c = 2; c != 0)
+    int c = 4; // { dg-error "redeclaration" }
+
+  if (int c = 2; int c = 6) // { dg-error "redeclaration" }
+    int c = 4; // { dg-error "redeclaration" }
+}
