@@ -1,3 +1,7 @@
+2016-10-06  Marek Polacek  <polacek@redhat.com>
+
+	* g++.dg/cpp1z/init-statement9.C: New test.
+
 2016-10-05  Andrew Senkevich  <andrew.senkevich@intel.com>
 
 	* gcc.target/i386/pcommit-1.c: Deleted.
